[tool.poetry]
name = "music-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "music_search"}]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
