[tool.poetry]
name = "music_search"
version = "0.1.0"
description = ""
authors = ["Rutvik <email@email.com>"]
readme = "README.md"
packages = [{include = "music_search"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
